--- a/src/assets/style/homepagestyle.scss
+++ b/src/assets/style/homepagestyle.scss
@@ -1,4 +1,4 @@
-body{
+body,html{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
@@ -11,6 +11,7 @@ html{
 *{
     box-sizing: border-box;
 }
+
 .video_bg{
     margin: 0;
     padding: 0;
@@ -30,8 +31,181 @@ html{
 .world_container a{
     text-decoration: none;
 }
-.home_section1{
+.home_section_bg{
+    background-image: url(https://dxaurk9yhilm4.cloudfront.net/images/287/background_imagev2_3580431e48aedf97dcedf972d1481942.jpg);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    // position: absolute;
+    // object-fit: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+   background-size: contain;
+   background-position: 100%;
+ 
+//     // position: relative;
+    overflow: hidden;
+    // display: flex;
+    // align-items: center;
+}
+.row1_content{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    gap: 0 10%;
 }
-.home_section_bg
+.section_row1{
+    padding-left: 10vw;
+    padding-right: 10vw;
+    padding-top: calc(10rem*0.75);
+}
+.row1_left{
+    text-align: left;
+}
+.row1_right img{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: #f3f3f3;
+}
+.row11_left2{
+    margin-top: -10%;
+}
+.row1_left2 img{
+    width: 100%;
+    margin-left: calc(10vw*0.25*-1);
+    margin-right: 0;
+}
+
+.row2_content{
+    display: grid;
+grid-template-columns: repeat(3, 1fr);       
+ overflow: hidden;   
+}
+.row2_content_img1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+//     content: "";
+
+}
+.row2_content_img1{
+    background: #000;
+      
+}
+.row2_content_img1 img{
+    opacity: 0.6;
+}
+@media screen and (max-width: 700px) {
+    .row2_content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .row2_content_img1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        
+        background-color: black;
+    //     content: "";
+        z-index: 2;
+    
+    }
+}
+
+
+
+
+
+$animationSpeed: 40s;
+
+// Animation
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 7))}
+}
+
+.home_section3_container{
+    padding-bottom: calc(10rem*0.4);
+    padding-top: calc(8rem*.75);
+}
+.section_row3_item1{
+    display: flex;
+    max-width: 80rem;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    padding-bottom: 2.8rem;
+    text-align: left;
+}
+.btn2{
+    margin-left: 25px;
+}
+.section_item1_left p{
+    font-size: 1.8rem;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+.arrow_right{
+    width: 65px;
+    height: 65px;
+    border-radius:50%;
+    border: none;
+    background-color: #FFFFFF;
+    box-shadow: 1px 5px 10px 3px #e4e0e0;
+}
+// // Styling
+.section_row3 {
+	height: 100%;
+	margin: auto;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	
+	// &::before,
+	// &::after {
+	// 	@include white-gradient;
+	// 	content: "";
+	// 	height: 600px;
+	// 	position: absolute;
+	// 	width: 100%;
+	// 	z-index: 2;
+	// }
+
+	
+	&::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	}
+
+	&::before {
+		left: 0;
+		top: 0;
+    
+	}
+	
+	.slider_row {
+		animation: scroll $animationSpeed linear infinite;
+		display: flex;
+		width: calc(250px * 14);
+	}
+    .slider_row img{
+        height: 70vh;
+        width: 25vw;
+        // margin-right: 0px !important;
+    }
+    .row3_content:not(:last-child) {
+        margin-right: -50px !important;
+    }
+}
+
+// .section_row3 img{
+//     height: 100%;
+//     width: 100%;
+// }
+
