--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,70 +1,3 @@
-<template>
-    <header class="gallery_header">
-        <div class="left_header">
-            <img src="../assets/logod.png" alt="" srcset="">
-            <!-- <span class="discovery_header_text1">Discovery</span>
-            <span class="discovery_header_text2">Land Company</span> -->
-
-        </div>
-        
-        <nav class="nav_header">
-            <ul class="nav_ul">
-                <li class="nav_li" v-for="(items,index) in header_items" :key= "index"><a href="#" class="nav_li_link">{{items.header_text}}</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            
-
-        </nav>
-        
-    </header>
-</template>
-
-<script lang="ts">
-import { Vue } from 'vue-class-component';
-
-export default class Header extends Vue {
-    data(){
-        return{
-            header_items: [
-                {
-                    header_text: "About DLC"
-                },
-                {
-                    header_text: "Our World"
-                },
-                {
-                    header_text: "Experiences"
-                },
-                {
-                    header_text: "Gallery"
-                },
-                {
-                    header_text: "Press"
-                }
-            ]
-        }
-    }
-}
-</script>
-
-<style lang="scss">
-body{
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    height: 100%;
-}
-html{
-    font-size: 20px;
-}
-*{
-    box-sizing: border-box;
-}
 .left_header img{
     width: 15vw;
 }
@@ -99,6 +32,7 @@ html{
     color: #fff;
     z-index: 100;
     transition: background-color 1s ease 0s;
+    text-decoration: none;
   }
 .nav_header li {
     font-size: 0.75rem;
@@ -168,4 +102,3 @@ html{
 }
 }
 
-</style>
