--- a/src/views/Homepage/homepage.scss
+++ b/src/views/Homepage/homepage.scss
@@ -11,7 +11,38 @@ html{
 *{
     box-sizing: border-box;
 }
+#text {
+    z-index: 100;
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 1.9rem;
+    // left: 150px;
+    // top: 350px;
+  }
+  
+#world_item_text1{
+    z-index: 100;
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 1rem;
+    // left: 150px;
+    top: 60%;  
+    text-transform: capitalize;
+  }
+  #world_item_text2{
+    z-index: 100;
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 0.7rem;
+    // left: 150px;
+    text-transform: capitalize;
+    top: 70%;  
+}
 
+  .content{
+    
+    padding: 2.5rem 2.5rem ;
+  }
 .video_bg{
     margin: 0;
     padding: 0;
@@ -20,6 +51,7 @@ html{
     width: 100%;
     height: 100%;
     overflow: hidden !important;
+    position: relative;
 }
 .video_bg video{
     margin: 0;
@@ -27,6 +59,7 @@ html{
     min-width: 100%;
     min-height: 100%;
     object-fit: cover;
+    position: relative;
 }
 .world_container a{
     text-decoration: none;
@@ -95,31 +128,135 @@ grid-template-columns: repeat(3, 1fr);
 }
 .row2_content_img1{
     background: #000;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
       
 }
 .row2_content_img1 img{
     opacity: 0.6;
 }
-@media screen and (max-width: 700px) {
-    .row2_content{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .row2_content_img1 img{
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        
-        background-color: black;
-    //     content: "";
-        z-index: 2;
-    
-    }
+
+.globe_container{
+    padding: 0;
+    margin:0;
+    background-color: #f3f3f3;
+}
+.globe_bg{
+    background-image: url(https://discoverylandco.com/static/globe-usa.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 100vh;  
+     // position: relative;
+     overflow: hidden;
+     z-index: 0;
+}
+.globe_row1{
+    // padding-top: 10vh;
+    width: 60%;
+    padding: 10vh 10vw;
+    text-align: left;
 }
 
+.country{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+}
 
+.globe_row2{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.globe_box{
+    background-color: #000;
+    width: 50%;
+    z-index: 1;
+    top: 5%;
+    left: 50%;
+    padding: 4%;
+    position: absolute;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+}
+.arrow_btn{
+    display: flex;
+    justify-content: flex-start;
+    padding: 0;
+    margin-bottom: 4rem;
+}
+.right_btn{
+    margin-left: 1rem;
+}
+.globe_item_left{
+    text-align: left;
+    width: 55%;
+}
 
+.globe_icons svg{
+    margin-bottom: 0.5rem;
+}
+.left_btn svg{
+    color: #FFFFFF;
+}
+button{
+    background-color: transparent;
+}
+.globe_icons{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;  
+}
+.globe_icons .temperature{  
+    font-size: 0.6rem;
+    color: #ffffff80;
+   
+}
 
+.globe_text{
+    margin: 4.5rem 0;
+}
+.globe_text1{
+    text-transform: capitalize;
+    margin-bottom: 0.9rem;
+    font-size: 0.8rem;
+}
+.globe_text2{
+    text-transform: capitalize;
+    // font-size: 2rem;
+}
+.lat_long_item{
+    display: flex;
+    align-items: center;
+}
+.text3{
+    margin-left: 0.5rem;
+    font-size: 0.6rem;
+    color: #ffffff80;
+}
+.text4{
+    margin: 2.5rem 0;
+    line-height: 1.5;
+}
+.globe_img img{
+    width: 90%;
+    height: 75vh;
+}
+.globe_item_right{
+    margin-top: -15%;
+    margin-bottom: 0;
+    height: 100%;
+    display: flex;
 
+}
+.globe_row2{
+    padding-bottom: 15vh;
+}
 $animationSpeed: 40s;
 
 // Animation
@@ -196,7 +333,7 @@ $animationSpeed: 40s;
 	}
     .slider_row img{
         height: 70vh;
-        width: 25vw;
+        width: 30vw;
         // margin-right: 0px !important;
     }
     .row3_content:not(:last-child) {
@@ -208,4 +345,59 @@ $animationSpeed: 40s;
 //     height: 100%;
 //     width: 100%;
 // }
+
+@media screen and (max-width: 700px) {
+    .row2_content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .row2_content_img1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        
+        background-color: black;
+    //     content: "";
+        z-index: 2;
+    
+    }
+    
+    .row1_content{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .section_row3  .slider_row img{
+        height: 50vh;
+        width: 50vw;
+        // margin-right: 0px !important;
+    }
+    .row1_right, .row1_left{
+        padding-bottom: calc(6rem *0.75);
+    }
+    .section_row3_item1{
+        flex-direction: column;
+        align-items: flex-start;    
+    }
+    .section_item1_right{
+        padding-top: calc(3rem*0.75);
+    }
+    #world_item_text2{
+       
+        font-size: 0.5rem;
+        
+    }
+    
+}
+
+@media screen and (max-width:1000px) {
+    .globe_box{
+        width: 100%; 
+        top: 70%;
+        left: 0%;
+    }
+    .globe_img img{
+        width: 100%;
+    }
+    .home_section2_container{
+        padding-top: 50vh;
+    }
+}
 
