[KOmal] added all files 04-10

--- a/src/views/Press/Press.scss
+++ b/src/views/Press/Press.scss
@@ -165,7 +165,8 @@ html{
     margin-top: 3rem;
     padding: 7% 20%;
     background-color: transparent;
-    border-color: #f3f3f3;
+    border: 1px solid #777;
+    // border-color: #f3f3f3;
     color: #000;
 }
 
