--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,104 +1,250 @@
-.left_header img{
-    width: 15vw;
-}
-.gallery_header{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;    
-    height: 8.1rem;
-    top: 0;
-    left: 0;   
-    position: absolute;
-    padding: 0% 7%;
-}
-.nav_header {
-  
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-}
-.nav_ul{
-    display: flex;
-    padding: 0;
-}
-.nav_li{
-    list-style: none;
-    margin-right: 1.5rem;
-    display: block;  
-}
-.gallery_header, .gallery_header a{
-    color: #fff;
-    z-index: 100;
-    transition: background-color 1s ease 0s;
-    text-decoration: none;
-  }
-.nav_header li {
-    font-size: 0.75rem;
-}
-.nav_header ul{
+body {
     margin: 0;
+    font-family: Helvetica, sans-serif;
+    background-color: #f4f4f4;
+  }
+  
+
+  
+  /* header */
+  .nav_header{
+      width: 100%;
+      height: 8.1rem;
+      top: 0;
+      left: 0;
+      position: absolute;
+      background-color: transparent;
+      display: flex;
+      justify-content: space-around;
+      align-items: center; 
+      z-index: 3;
 }
-// .nav_header a{
+// .right_nav a{
+//     text-decoration: none;
+//     color: #000;
 //     display: block;
+//     position: relative;
 // }
-.nav_li_link{
-    color: #490D40;
-}
 .nav_header a{
 //   display: inline-block;
     display: block;
     position: relative;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 .nav_header a:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 0.5s ease-out;
 }
 
 .nav_header a:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
-.hamburger span{
-    
+  .left_nav img{
+    // width: 10vw;
+    height: 5.5vh;
+    // height: 50px;  //height property not working
+  }
+  
+  .nav_ul{
+    display: flex;
+    list-style: none;  
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav_li{
+      margin-right: 3vw;
+      font-size: 1rem;
+  }
+  .hamburger{
+      color: #FFFFFF;
+      display: none;
+  }
+  #nav_toggle{
+      display: none;
+  }
+
+  @media screen and (max-width: 900px) {
+    .hamburger{
+        display: inline-block;
+    }
+    // #nav_toggle{
+    //     display: block;
+    // }
+    #nav_toggle {
+        display: inline-block;
+        padding: 13px;
+      }
+    .nav_a{
+          color: rgb(128, 32, 32);
+      }
+    .nav_ul{
+          display: none;
+         
+      }
+    // #nav_toggle:checked ~ .nav_a {
+    //     color: rgb(217, 255, 0);
+    // }
+    #nav_toggle:checked ~ .nav_ul{
+    // // left: 0;
+    // color: seagreen;
+    z-index: 100;
+    height: 100vh;
+    position: absolute;
+    // top: 80px;
+    background-color: #000;
+    color: rgb(190, 225, 65);
+    width: 100%;
     display: block;
- width: 1.5vw;
-  height: 2px;
-  margin-bottom: 5px;  
-  background: #fff;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-//   transform-origin: 4px 0px;
-  
-//   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-//               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-//               opacity 0.55s ease;
-}
-.hamburger span:nth-child(3){
-    width: 60%;
-    margin-left: auto;
-}
-@media screen and (max-width:500px) {
-    .nav_header ul{
-        flex-direction: column;
+    left: 0;
+    padding: 0 10vw;
+    text-align: left;
+    animation: headeranimation 1s linear;
     }
-    .nav_header li{
-        font-size: 14px;
+
+    @keyframes headeranimation {
+        0% {
+            opacity: 0;    
+            transform:translate3d(0,-25%,0);
+        }
+        100%{
+            opacity: 1;
+        }
     }
-    .left_header img{
-    width: 10vw;
-}
-}
+  
+    .nav_ul .nav_li .nav_a{
+        color: rgb(190, 225, 65);
+        animation: ulanimation 1s linear;
+        padding: 2%;
+    }
+    @keyframes ulanimation {
+        0% {
+            opacity: 0;    
+            transform:translate3d(0,25%,0);        }
+        100%{
+            opacity: 1;
+            transform:translate3d(0,50%,0); 
+        }
+    }
+    // #nav_toggle:checked ~ .nav_header{
+    //     background-color: #000;
+    // }
+  }
+
+
+  
+// .left_header img{
+//     width: 15vw;
+// }
+// .gallery_header{
+//     display: flex;
+//     flex-direction: row;
+//     width: 100%;
+//     justify-content: space-between;
+//     align-items: center;    
+//     height: 8.1rem;
+//     top: 0;
+//     left: 0;   
+//     position: absolute;
+//     padding: 0% 7%;
+// }
+// .nav_header {
+  
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center; 
+// }
+// .nav_ul{
+//     display: flex;
+//     padding: 0;
+// }
+// .nav_li{
+//     list-style: none;
+//     margin-right: 1.5rem;
+//     display: block;  
+// }
+// .gallery_header, .gallery_header a{
+//     color: #fff;
+//     z-index: 100;
+//     transition: background-color 1s ease 0s;
+//     text-decoration: none;
+//   }
+// .nav_header li {
+//     font-size: 0.75rem;
+// }
+// .nav_header ul{
+//     margin: 0;
+// }
+// // .nav_header a{
+// //     display: block;
+// // }
+// .nav_li_link{
+//     color: #490D40;
+// }
+// .nav_header a{
+// //   display: inline-block;
+//     display: block;
+//     position: relative;
+// }
+
+// .nav_header a:after {
+//   content: '';
+//   position: absolute;
+//   width: 100%;
+//   transform: scaleX(0);
+//   height: 1px;
+//   bottom: 0;
+//   left: 0;
+//   background-color: #fff;
+//   transform-origin: bottom right;
+//   transition: transform 0.25s ease-out;
+// }
+
+// .nav_header a:hover:after {
+//   transform: scaleX(1);
+//   transform-origin: bottom left;
+// }
+// .hamburger span{
+    
+//     display: block;
+//  width: 1.5vw;
+//   height: 2px;
+//   margin-bottom: 5px;  
+//   background: #fff;
+//   border-radius: 3px;
+  
+//   z-index: 1;
+  
+// //   transform-origin: 4px 0px;
+  
+// //   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+// //               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+// //               opacity 0.55s ease;
+// }
+// .hamburger span:nth-child(3){
+//     width: 60%;
+//     margin-left: auto;
+// }
+// @media screen and (max-width:500px) {
+//     .nav_header ul{
+//         flex-direction: column;
+//     }
+//     .nav_header li{
+//         font-size: 14px;
+//     }
+//     .left_header img{
+//     width: 10vw;
+// }
+// }
 
