--- a/src/components/Boxslider/Boxslider.scss
+++ b/src/components/Boxslider/Boxslider.scss
@@ -1,22 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
+.arrow_btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-bottom: 4rem;
+}
+// .right_btn{
+//     margin-left: 1rem;
+// }
+.globe_item_left{
+    text-align: left;
+    width: 55%;
+}
+
+.globe_icons svg{
+    margin-bottom: 0.5rem;
+}
+.left_btn svg, .right_btn svg{
+    color: #000;
+    cursor: pointer;
+}
+button{
+    background-color: transparent;
+    border: 1px solid transparent;
+}
 
 .row1{
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    // align-items: center;
     margin-bottom: 20vh;
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     // margin-top: 10vh;
 }
 
 .row1_item{
     position: relative;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     z-index: 2;
+    transform: translateX(6rem);
+    flex: 1;
+    margin: 0 0 0 calc((10vw * 0.5) * -1);
 
 }
 .section3_img1{
@@ -34,23 +63,26 @@
     z-index: 2;
 
 }
-.row1_item1{
+.row1_item1_container{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     background-color: #FFFFFF;
-    margin: calc(10vh * 0.75) 0;
-    padding: 6rem 4rem 3.5rem;
     z-index: 10;
-    width: 50%;
-    // width: 30rem;
-    min-height: 70%;
-    // height: 100%;
+    width: 30rem;
+    // min-height: 70vh;
+    height: 100%;
     position: relative;
     text-align: left;
     order: 2;
     display: flex;
     justify-content: center;
+    padding: 3rem;
     align-items: center;
-    margin-left: -20%;
+    // margin-left: -20%;
 }
+// .row1_item1{
+//     padding: 5rem 4rem 3.5rem;
+// }
 .section3_img2{
     background-image: url(https://dxaurk9yhilm4.cloudfront.net/images/533/Golf3_a6d5da221c5021abd741e6da07ad9aaa.jpg);
     position: absolute;
@@ -88,14 +120,24 @@
 //     margin-left: -50%;
 //     text-align: left;
 // }
+.box2_head_news h6{
+    color: #777;
+    font-size: 0.9rem;
+    font-weight: 100;
+    margin: 0;
+}
+.box2_head_news{
+    margin-bottom: 1.5rem;
+}
 .box2_head{
     margin-bottom: 1.5rem;
 
 }
 .box2_head h2{
     font-family: 'Spectral', serif;
-    font-size: 2.5rem;
-    font-weight: 500;
+    line-height: 1;
+    font-size: calc(21.33333px + 1.13333vw);
+    font-weight: 200;
     margin: 0;
 }
 .box2_text p{
@@ -131,6 +173,10 @@
         line-height: 2;
         font-size: 0.8rem;
     }
+    .row1_item1_container{
+        margin-top: -5rem;
+        width: 90%;
+    }
     .row1{
         flex-direction: column;
         margin: 0 auto;
@@ -142,7 +188,7 @@
         padding: 4vh 4vw;
         z-index: 4;
         // min-width: 23.5rem;
-        width: 90%;
+        // width: 90%;
         margin: 0 auto;
         margin-top: -20%;
         position: relative;
@@ -166,9 +212,7 @@
     }
 }
 @media screen and (max-width: 900px) {
-    .row1{
-        width: 70%;
-    }
+
     .box2_head h2{
         font-size: 2rem;
     }
@@ -178,9 +222,6 @@
     }
 }
 @media screen and (max-width: 700px) {
-    .row1{
-        width: 80%;
-    }
     .box2_head h2{
         font-size: 1.5rem;
     }
@@ -188,15 +229,8 @@
         line-height: 2;
         font-size: 0.7rem;
     }
-    .section3_img2{
-        bottom: -40%;        
-    }
 }
-@media screen and (max-width: 500px) {
-    .row1{
-        width: 90%;
-    }
-}
+
 //     .section3_box2 h2{
 //         font-size: 1.2rem;
 //     }
