--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,39 +1,39 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&display=swap');
 
-.section6_container{
+.section8_container{
     padding: 0;
     margin: 0;
     margin-bottom: 10vh;
 }
-.row_grid{
+.row_grid_new{
     width: 80%;
     margin: 0 auto;
 }
-.section6{
+.section8{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0 10%;
 }
-.section6_left_img{
+.section8_left_img{
     width: 100%;
     height: auto;
 }
-.section6_left_img img{
+.section8_left_img img{
     width: 100%;
     height: auto;
 }
-.section6_right_img{
+.section8_right_img{
     margin-top: -10%;
     width: 100%;
     height: auto;
 }
-.section6_right_img img{
+.section8_right_img img{
     width: 100%;
     height: auto;
 }
 
-.para6{
+.para8{
     width: 80%;
     display: flex;
     align-items: flex-start;
@@ -41,7 +41,7 @@
     justify-content: center;
 }
 
-.para6 p{
+.para8 p{
     font-family: 'Martel Sans', sans-serif;
     text-align: left;
     font-size: 0.8rem;
@@ -51,13 +51,13 @@
     color: #777;
 }
     
-    // .para6{
+    // .para8{
     //     padding-bottom: calc(8rem * 0.75);
     //     padding-top: calc(8rem * 0.75);
     //     text-align: left;
     //     // grid-area: content1;
     // }
-.para6 h2{
+.para8 h2{
     font-size: 1.8rem;
     line-height: 1.2;
     font-weight: 500;
@@ -66,49 +66,49 @@
     text-align: left;
     font-family: 'Spectral', serif;
 }
-// .section6_left img{
+// .section8_left img{
 //     top: 0;
 //     left: 0;
 //     width: 100%;
 // }
-// .section6_right_img img{
+// .section8_right_img img{
 //     top: 0;
 //     left: 0;
 //     width: 100%;
 //     height: 100%; 
 // }
-// .section6_left{
-//     grid-area: img2;
+// .section8_left{
+//     grid-area: img2_new;
 // }
-// .section6_right_img{
+// .section8_right_img{
 //     grid-area: img1;
 // }
-// .section6{
+// .section8{
 //     display: grid;
 //     grid-template-columns: repeat(2, 1fr);
 //     gap: 0 10%;
 //     grid-template-areas: 
-//         "img2 content1"
-//         "img2 img1";
+//         "img2_new content1"
+//         "img2_new img1";
 // }
 
 
 @media screen and (max-width: 1000px) {
-    .section6_right_img img{
+    .section8_right_img img{
         display: none;
     }
-    .section6{
+    .section8{
         grid-template-columns: 1fr;
         gap: 0;
         grid-template-areas: 
             "content1"
-            "img2";
+            "img2_new";
     }
-    .para6{
+    .para8{
         max-width: 40vw;
         padding-bottom: 15vh;
     }
-    .para6 p{
+    .para8 p{
         font-size: 0.6rem;
     }
     
@@ -117,12 +117,12 @@
 
 @media screen and (max-width: 700px) {
 
-    .para6{
+    .para8{
         max-width: 100vw;
         width: 100%;
         padding-bottom: 15vh;
     }
-    .para6 h2{
+    .para8 h2{
         font-size: 1.5rem;
     }
 }
