--- a/src/components/Griddesign/Griddesign.scss
+++ b/src/components/Griddesign/Griddesign.scss
@@ -24,7 +24,7 @@
     height: auto;
 }
 .section6_right_img{
-    margin-top: -10%;
+    margin-top: -15%;
     width: 100%;
     height: auto;
 }
@@ -67,31 +67,31 @@
     text-align: left;
     font-family: 'Spectral', serif;
 }
-// .section6_left img{
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-// }
-// .section6_right_img img{
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%; 
-// }
-// .section6_left{
-//     grid-area: img2;
-// }
-// .section6_right_img{
-//     grid-area: img1;
-// }
-// .section6{
-//     display: grid;
-//     grid-template-columns: repeat(2, 1fr);
-//     gap: 0 10%;
-//     grid-template-areas: 
-//         "img2 content1"
-//         "img2 img1";
-// }
+.section6_left img{
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.section6_right_img img{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+}
+.section6_left{
+    grid-area: img2;
+}
+.section6_right_img{
+    grid-area: img1;
+}
+.section6{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0 10%;
+    grid-template-areas: 
+        "img2 content1"
+        "img2 img1";
+}
 
 
 @media screen and (max-width: 1000px) {
