--- a/src/components/Para/Para.scss
+++ b/src/components/Para/Para.scss
@@ -1,35 +1,31 @@
 .section1_container{
-    padding: calc(10rem * 0.75) 9vw  ;
+    padding: calc(10rem * 0.75) calc(10vw * 0.75);
 }
 .para1 p{
     text-align: center;
     font-family: 'Spectral', serif;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     line-height: 1.2;
     font-weight: 500;
+    color: #111;
     
 }
 
 @media screen and (max-width: 1000px){
     .para1 p{
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 }
 
 @media screen and (max-width: 700px){
     .para1 p{
-        font-size: 1.2rem;
+        font-size: 1.65rem;
+        text-align: left;
     }
 }
 
 @media screen and (max-width: 500px){
     .para1 p{
-        font-size: 1rem;
-    }
-}
-
-@media screen and (max-width: 400px){
-    .para1 p{
-        font-size: 0.8rem;
+        font-size: 1.55rem;
     }
 }
