--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 
 body{ 
     margin: 0;
@@ -11,9 +13,9 @@ body{
 *{
     box-sizing: border-box;
 }
-html{
-    font-size: 20px;
-}
+// html{
+//     font-size: 20px;
+// }
 
 .section1_container{
     padding: 12vh 15vw  ;
@@ -21,7 +23,7 @@ html{
 
 
 .about_bg{
-   background: url(https://dxaurk9yhilm4.cloudfront.net/images/7383/jael-rodriguez-AkF5NT0sZy8-unsplash-1-1_210301_200939_35d31212c7a2d4dccdff99afa3f88af5.jpg) no-repeat center center;
+   background: url(../../assets/about.jpg) no-repeat center center;
    background-size: cover;
    height: 100vh; 
     // position: relative;
@@ -44,27 +46,6 @@ html{
     width: 100%;
 
 }
-.section7 img{
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-.section7{
-    background: #000;
-    position: relative;
-      
-}
-.section7 img{
-    opacity: 0.6;
-}
-.text1 {
-    z-index: 100;
-    position: absolute;
-    color: #FFFFFF;
-    font-size: 1.9rem;
-    left: 50%;
-    top: 20%;
-  }
 
 .section5_container{
     padding-left: 0;
@@ -170,6 +151,7 @@ $animationSpeed: 40s;
     // }
    
 // }
+
 @media screen and (max-width:500px) {
     .section1_container{
         padding:  calc(4rem * 0.75) 9vw;
@@ -177,6 +159,7 @@ $animationSpeed: 40s;
     .para1 p{
         text-align: left;
     }
+    
     // .section2_right img{
     //     width: 100%;
     // }
