[Komal] made changes to slider

--- a/src/components/Boxslider/Boxslider.scss
+++ b/src/components/Boxslider/Boxslider.scss
@@ -34,7 +34,7 @@ button{
     // align-items: center;
     margin-bottom: 20vh;
     width: 100%;
-    // height: 100vh;
+    height: 100vh;  //changed
     // margin-top: 10vh;
 }
 
@@ -69,8 +69,8 @@ button{
     background-color: #FFFFFF;
     z-index: 10;
     width: 30rem;
-    // min-height: 70vh;
-    height: 100%;
+    min-height: 70vh;
+    // height: 100%;
     position: relative;
     text-align: left;
     order: 2;
@@ -174,23 +174,26 @@ button{
         font-size: 0.8rem;
     }
     .row1_item1_container{
+        margin: 0 auto;
         margin-top: -5rem;
         width: 90%;
+    }
+    .row1_item{
+        margin: 0;
+        transform: translateX(0);
     }
     .row1{
         flex-direction: column;
         margin: 0 auto;
-        width: 60%;
+        width: 100%;
         height: 100%;
         margin-bottom: 20vh;
     }
     .row1_item1{
-        padding: 4vh 4vw;
         z-index: 4;
         // min-width: 23.5rem;
         // width: 90%;
         margin: 0 auto;
-        margin-top: -20%;
         position: relative;
         text-align: left;
         min-height: 70%;
@@ -212,7 +215,6 @@ button{
     }
 }
 @media screen and (max-width: 900px) {
-
     .box2_head h2{
         font-size: 2rem;
     }
@@ -221,15 +223,15 @@ button{
         font-size: 0.9rem;
     }
 }
-@media screen and (max-width: 700px) {
-    .box2_head h2{
-        font-size: 1.5rem;
-    }
-    .box2_text p{
-        line-height: 2;
-        font-size: 0.7rem;
-    }
-}
+// @media screen and (max-width: 700px) {
+//     .box2_head h2{
+//         font-size: 1.5rem;
+//     }
+//     .box2_text p{
+//         line-height: 2;
+//         font-size: 0.7rem;
+//     }
+// }
 
 //     .section3_box2 h2{
 //         font-size: 1.2rem;
