--- a/src/views/Homepage/homepage.scss
+++ b/src/views/Homepage/homepage.scss
@@ -22,20 +22,23 @@ body,html{
   
 #world_item_text1{
     z-index: 100;
-    position: absolute;
+    // position: absolute;
     color: #FFFFFF;
-    font-size: 1rem;
+    font-size: 2rem;
+    font-family: 'Spectral', serif;
+    font-weight: 100;
     // left: 150px;
     top: 50%;  
     text-transform: capitalize;
   }
   #world_item_text2{
     z-index: 100;
-    position: absolute;
-    color: #FFFFFF;
-    font-size: 0.7rem;
+    // position: absolute;
+    color: hsla(0, 0%, 100%, 0.75);
+    font-size: 0.9rem;
     // left: 150px;
     text-transform: capitalize;
+    margin-top: 1.5rem;
     top: 60%;  
 }
 
@@ -45,7 +48,16 @@ body,html{
     display: flex;
     justify-content: center;
     align-items: center;
-    align-content: center;
+    flex-direction: column;
+    // align-content: center;
+    // position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 2.5rem 3rem;
+    z-index: 5;
+    // background-color: aquamarine;
+    margin-top:  -80%;
     
   }
 .video_bg{
@@ -305,11 +317,11 @@ $animationSpeed: 40s;
 }
 // // Styling
 .section_row3 {
-	height: 100%;
-	margin: auto;
+	height: 70vh;
+	margin: 0;
 	overflow: hidden;
 	position: relative;
-	width: 100%;
+	width: 100vw;
 	
 	// &::before,
 	// &::after {
@@ -322,26 +334,30 @@ $animationSpeed: 40s;
 	// }
 
 	
-	&::after {
-		right: 0;
-		top: 0;
-		transform: rotateZ(180deg);
-	}
+	// &::after {
+	// 	right: 0;
+	// 	top: 0;
+	// 	transform: rotateZ(180deg);
+	// }
 
-	&::before {
-		left: 0;
-		top: 0;
+	// &::before {
+	// 	left: 0;
+	// 	top: 0;
     
-	}
+	// }
 	
 	.slider_row {
 		animation: scroll $animationSpeed linear infinite;
 		display: flex;
-		width: calc(250px * 14);
+		width: calc(500px * 14);
 	}
+    .row3_figure{
+        background-color: #000;
+    }
     .slider_row img{
         height: 70vh;
         width: 30vw;
+        // opacity: 0.7;
         // margin-right: 0px !important;
     }
     .row3_content:not(:last-child) {
@@ -368,9 +384,9 @@ $animationSpeed: 40s;
     .section_row3 .slider_row img{
         width: 45vw;
     }
-    #world_item_text2{
-        font-size: 0.6rem;
-    }
+    // #world_item_text2{
+    //     font-size: 0.6rem;
+    // }
 }
 
 
@@ -409,11 +425,11 @@ $animationSpeed: 40s;
     }
     #world_item_text2{
        
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         
     }
     #world_item_text1{
-        font-size: 0.6rem;
+        font-size: 1.5rem;
     }
     .section_row3 .slider_row img{
         width: 55vw;
